DevOrg/src/objects/ACH_Payments_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Email_Recipient__c</fullName>
        <label>Email Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Tracking_Date__c</fullName>
        <label>Last Tracking Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Check__c</fullName>
        <label>Transaction Check #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ACH Payments Settings</label>
</CustomObject>